--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <div id="header">
                 <div id="title">Queue Dashboard</div>
             </div>
+            <div id="configuration">
+                <div id="error-color-picker">
+                    <label for="error-color">Error chart color:</label>
+                    <input type="color" id="error-color" value="#ff0000">
+                </div>
+            </div>
             <div id="error-rate" class="chart-container">
                 <div class="chart"></div>
                 <div class="loading-icon lds-dual-ring" hidden></div>
