--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <div id="configuration">
                 <div id="error-color-picker">
-                    <label for="error-color">Error chart color:</label>
-                    <input type="color" id="error-color" value="#ff0000">
+                    <label for="errorColor">Error chart color:</label>
+                    <input type="color" id="errorColor" value="#ff0000">
                 </div>
             </div>
             <div id="error-rate" class="chart-container">
