--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <label for="errorColor">Error chart color:</label>
                     <input type="color" id="errorColor" value="#ff0000">
                 </div>
+                <div id="arrivals-color-picker">
+                    <label for="arrivalsColor">Arrivals chart color:</label>
+                    <input type="color" id="arrivalsColor" value="#00ff00">
+                </div>
             </div>
             <div id="error-rate" class="chart-container">
                 <div class="chart"></div>
