--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <input type="color" id="arrivalsColor" value="#00ff00">
                 </div>
             </div>
-            <div id="error-rate" class="chart-container">
+            <div id="errorRate" class="chart-container">
                 <div class="chart"></div>
                 <div class="loading-icon lds-dual-ring" hidden></div>
                 <div class="warning-icon" hidden>⚠️</div>
             </div>
-            <div id="arrival-rate" class="chart-container">
+            <div id="arrivalRate" class="chart-container">
                 <div class="chart"></div>
                 <div class="loading-icon lds-dual-ring" hidden></div>
                 <div class="warning-icon" hidden>⚠️</div>
