--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 </div>
             </div>
             <div id="errorRate" class="chart-container">
-                <div class="chart"></div>
+                <div id="errorChart" class="chart"></div>
                 <div class="loading-icon lds-dual-ring" hidden></div>
                 <div class="warning-icon" hidden>⚠️</div>
             </div>
             <div id="arrivalRate" class="chart-container">
-                <div class="chart"></div>
+                <div id="arrivalsChart" class="chart"></div>
                 <div class="loading-icon lds-dual-ring" hidden></div>
                 <div class="warning-icon" hidden>⚠️</div>
             </div>
