--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- scripts -->
         <script src="scripts/index.mjs" type="module"></script>
-        <script src="configuration.js"></script>
+        <script src="configuration.mjs" type="module"></script>
     </head>
     <body>
         <div id="main-container">
