--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
                 <div id="title">Queue Dashboard</div>
             </div>
             <div id="configuration">
+                <div>
+                    <input type="text" id="refreshRate" value="3000">
+                </div>
+                <div>
+                    <input type="text" id="duration" value="3">
+                </div>
+                <div>
+                    <input type="text" id="bucketSize" value="5">
+                </div>
                 <div id="error-color-picker">
                     <label for="errorColor">Error chart color:</label>
                     <input type="color" id="errorColor" value="#ff0000">
