--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
             <div id="configuration">
                 <div id="config-header">
                     <h3 class="config-header-element">Configuration</h3>
-                    <button id="showButton" class="config-header-element" onclick=""></button>
-                    <button id="hideButton" class="config-header-element" onclick=""></button>
+                    <div id="showHideButtons" class="config-header-element">
+                        <button id="showButton">Show</button>
+                        <button id="hideButton">Hide</button>
+                    </div>
                 </div>
                 <div id="config-tabs">
                     <div class="config-tab">
