--- a/index.html
+++ b/index.html
@@ -64,6 +64,28 @@
                 <div class="loading-icon lds-dual-ring" hidden></div>
                 <div class="warning-icon" hidden>⚠️</div>
             </div>
+            <div id="waiting-time-stats" class="chart-container">
+                <div class="chart panel-container">
+                    <div class="panel">
+                        <p class="label">Average Waiting Time</p>
+                        <p class="count">0.0</p>
+                    </div>
+                    <div class="panel">
+                        <p class="label">Median Waiting Time</p>
+                        <p class="count">0.0</p>
+                    </div>
+                    <div class="panel">
+                        <p class="label">Maximum Waiting Time</p>
+                        <p class="count">0.0</p>
+                    </div>
+                    <div class="panel">
+                        <p class="label">Minimum Waiting Time</p>
+                        <p class="count">0.0</p>
+                    </div>
+                </div>
+                <div class="loading-icon lds-dual-ring" hidden></div>
+                <div class="warning-icon" hidden>⚠️</div>
+            </div>
         </div>
     </body>
 </html>
