--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                         <label for="arrivalsColor">Arrivals chart color:</label>
                         <input type="color" id="arrivalsColor" value="#00ff00">
                     </div>
+                    <div id="waiting-color-picker" class="config-tab">
+                        <label for="waitingColor">Waiting time stats chart color:</label>
+                        <input type="color" id="waitingColor" value="#008000">
+                    </div>
                 </div>
             </div>
             <div id="errorRate" class="chart-container">
