--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                 <div class="chart panel-container">
                     <div class="panel">
                         <p class="label">Average Waiting Time</p>
-                        <p class="count">0.0</p>
+                        <p id="average" class="count">0.0</p>
                     </div>
                     <div class="panel">
                         <p class="label">Median Waiting Time</p>
-                        <p class="count">0.0</p>
+                        <p id="median" class="count">0.0</p>
                     </div>
                     <div class="panel">
                         <p class="label">Maximum Waiting Time</p>
-                        <p class="count">0.0</p>
+                        <p id="maximum" class="count">0.0</p>
                     </div>
                     <div class="panel">
                         <p class="label">Minimum Waiting Time</p>
-                        <p class="count">0.0</p>
+                        <p id="minimum" class="count">0.0</p>
                     </div>
                 </div>
                 <div class="loading-icon lds-dual-ring" hidden></div>
