--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <!-- scripts -->
         <script src="scripts/index.mjs" type="module"></script>
+        <script src="/scripts/modules/connector.mjs" type="module"></script>
         <script src="configuration.mjs" type="module"></script>
     </head>
     <body>
